...
    "action.cancel" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        }
      }
    },
    "action.delete" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
        }
      }
    },
    "action.deleteAll" : {
      "extractionState" : "manual",
...
    "action.save" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        }
      }
    },
    "addDrink.alcoholUnits" : {
      "extractionState" : "manual",
...
    "addDrink.currency" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Currency"
          }
        }
      }
    },
    "addDrink.date" : {
      "extractionState" : "manual",
...
    "addDrink.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Drink"
          }
        }
      }
    },
    "addDrink.volume" : {
      "extractionState" : "manual",
...
    "editDrink.customName" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Custom Name"
          }
        }
      }
    },
    "editDrink.customNamePlaceholder" : {
      "extractionState" : "manual",
...
    "tab.history" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "History"
          }
        }
      }
    },
    "tab.home" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Home"
          }
        }
      }
    },
    "tab.insights" : {
      "extractionState" : "manual",
...
    "tab.settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        }
      }
    },
    "unit.day" : {
      "extractionState" : "manual",
...
